<resources>
    <string name="app_name">TMDB</string>
    <string name="Synopsis">"Synopsis: "</string>
    <string name="regisseur">Director:</string>
    <string name="acteurs">Actors:</string>
    <string name="duur_movie">Duration:</string>
    <string name="Leeftijd">Age:</string>
    <string name="Movie_taal">Language:</string>
    <string name="save_settings_title">Save</string>
    <string name="dark_mode_title">Dark mode</string>
    <string name="language_title">Language</string>
    <string name="api_key_title">API key</string>
    <string name="api_settings_header">Settings</string>
    <string name="picture_of_movie">Picture of movie</string>
    <string name="dutch">Dutch</string>
    <string name="english">English</string>
    <string name="cast">Full Cast</string>
    <string name="popularity">Popularity</string>
    <string name="release_date">Release Date</string>
    <string name="populair_movies">Populair Movies</string>
    <string name="my_lists">My Lists</string>
    <string name="upcoming_movies">Upcoming Movies</string>

    <string name="filtering">Filter by</string>
    <string name="sorting">Sorting by</string>
    <string name="sort_filter_genre">Genre</string>
    <string name="sort_rating">Rating</string>
    <string name="filter_rating">Minimum Rating</string>
    <string name="sort_filter_date">Release Date (year)</string>
    <string name="enter_api_key">Enter API Key</string>
    <string name="choose_language">Choose language</string>
    <string name="dark_mode_description">Enable dark mode</string>
    <string name="language_description">Enter preferred language</string>
    <string name="api_key_description">Change API key, this changes the account</string>

    <string-array name="available_languages">
        <item>@string/english</item>
        <item>@string/dutch</item>
    </string-array>

    <string-array name="pref_languages">
        <item>en</item>
        <item>nl</item>
    </string-array>

    <string name="standard_api">e2510df5c4693ebfbf806cd9c6900aab</string>
    <string name="pref_api_key">pref_api_key</string>
    <string name="pref_language">pref_language</string>
    <string name="pref_theme">pref_theme</string>
    <string name="pref_dark_theme">pref_dark_theme</string>
    <string name="created_list">"Created list: "</string>
    <string name="rating">Rating</string>
    <string name="new_list_name">New list name</string>
    <string name="create_list">Create List</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="created_list_toast">"Created list: "</string>
    <string name="added_to_list_toast">"Added to list: "</string>
    <string name="failed_to_fetch_cast_info_toast">Failed to fetch cast info.</string>
    <string name="nee_is_niet_gelukt_toast">Oopsie Whoopsie</string>
    <string name="rating_toast">rating</string>
    <string name="current_position_popular_toast">current position popular</string>
    <string name="sorting_lists_is_not_possible_toast">sorting lists is not possible</string>
    <string name="current_position_upcoming_toast">current position upcoming</string>
    <string name="release_toast">release</string>
    <string name="current_position_popular_toastmain">current position popular</string>
    <string name="sorting_lists_is_not_possible_toastmain">sorting lists is not possible</string>
    <string name="current_position_upcoming_main">current position upcoming</string>


</resources>