<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/api_settings_header">

        <EditTextPreference
            app:key="api_key"
            app:title="@string/api_key_title"
            app:useSimpleSummaryProvider="true"/>

        <ListPreference
            app:key="language"
            app:title="@string/language_title"
            app:entries="@array/language_options_entries"
            app:entryValues="@array/language_options_values"
            app:defaultValue="@string/language_default_value"
            app:useSimpleSummaryProvider="true"/>

        <SwitchPreferenceCompat
            app:key="dark_mode"
            app:title="@string/dark_mode_title"/>
    </PreferenceCategory>

    <Preference
        app:key="save_settings"
        app:title="@string/save_settings_title"
        app:widgetLayout="@layout/save_button_layout"/>


</PreferenceScreen>
