<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:textSize="32sp"
        android:textStyle="bold"
        android:id="@+id/text_view_detail_movie_name"/>

    <ImageView
        android:layout_width="300sp"
        android:layout_height="300sp"
        android:layout_marginBottom="10sp"
        android:id="@+id/image_view_detail_movie"/>

        <RatingBar
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/ratingBarStyleSmall"
            android:numStars="5"
            android:stepSize="0.5"
            android:isIndicator="true" />

      <TextView
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:text="@string/Synopsis"
          android:id="@+id/movie_synopsis"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/regisseur"
                android:id="@+id/movie_regisseur"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/acteurs"
                android:id="@+id/movie_acteurs"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duur_movie"
                android:id="@+id/movie_duur"/>
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Leeftijd"
                android:id="@+id/Movie_leeftijd"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Movie_taal"
                android:id="@+id/Movie_taal"/>



        </LinearLayout>

</ScrollView>