<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/sorting"
        android:title="@string/sorting" >
        <menu>
            <group
                android:checkableBehavior="single" >
                <item
                    android:id="@+id/sort_by_rating"
                    android:title="@string/sort_rating"
                    />
                <item
                    android:id="@+id/sort_by_release"
                    android:title="@string/sort_filter_date"
                    />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/filtering"
        android:title="@string/filtering" >
        <menu>
            <item
                android:id="@+id/filter_by_rating"
                android:title="@string/filter_rating" >

                <menu>
                    <group
                        android:checkableBehavior="single" >
                            <item
                                android:id="@+id/filter_rating_1"
                                android:title="1.0" />
                            <item
                                android:id="@+id/filter_rating_2"
                                android:title="2.0" />
                            <item
                                android:id="@+id/filter_rating_3"
                                android:title="3.0" />
                            <item
                                android:id="@+id/filter_rating_4"
                                android:title="4.0" />
                            <item
                                android:id="@+id/filter_rating_5"
                                android:title="5.0" />
                            <item
                                android:id="@+id/filter_rating_6"
                                android:title="6.0" />
                            <item
                                android:id="@+id/filter_rating_7"
                                android:title="7.0" />
                            <item
                                android:id="@+id/filter_rating_8"
                                android:title="8.0" />
                            <item
                                android:id="@+id/filter_rating_9"
                                android:title="9.0" />
                            <item
                                android:id="@+id/filter_rating_10"
                                android:title="10.0" />
                    </group>
                </menu>
            </item>
            <item
                android:id="@+id/filter_by_date"
                android:title="@string/sort_filter_date" >

                <menu>
                    <group
                        android:checkableBehavior="single" >
                        <item
                            android:id="@+id/filter_date_2021"
                            android:title="2021"/>
                        <item
                            android:id="@+id/filter_date_2022"
                            android:title="2022"/>
                        <item
                            android:id="@+id/filter_date_2023"
                            android:title="2023"/>
                        <item
                            android:id="@+id/filter_date_2024"
                            android:title="2024"/>
                        <item
                            android:id="@+id/filter_date_2025"
                            android:title="2025"/>
                    </group>
                </menu>
            </item>
            <item
                android:id="@+id/reset_filter"
                android:title="Reset Filter" />
        </menu>
    </item>
</menu>